added delete user endpoint
