# apps/api/internal/routes/users/route.go
@@ -6,6 +6,12 @@ import (
 
 func UsersRoute(app fiber.Router) {
 	Users := app.Group("/users")
+
 	Users.Get("/", getUserList)
+
+	Users.Get("/:userId", getUserById)
+
 	Users.Post("/", createUser)
+
+	Users.Delete("/:userId", deleteUserById)
 }
